Added scss-loader works

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,6 @@
-.firstStyle {
-  color: yellow;
-  background-color: red;
+:local {
+  .firstStyle {
+    color: yellow;
+    background-color: red;
+  }
 }
